--- a/seven/index.html
+++ b/seven/index.html
@@ -14,7 +14,9 @@
         <div class="container banner">
             <div class="header_text">
                 <h2>Let's make beautiful flowers a part of your life.</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
             <div class="header_image">
@@ -22,6 +24,104 @@
             </div>
         </div>
     </header>
+    <!-- main section -->
+    <main class="">
+        <!-- Feature section start -->
+        <section class="our_feature container">
+            <div class="section_text features_text">
+                <h2>Our Featured Flowers</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                    looking at its layout.</p>
+            </div>
+            <div class="features_items">
+                <div class="feature_item">
+                    <div class="feature_image">
+                        <img src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <a href="">Pink Flower Tree</a>
+                </div>
+                <div class="feature_item">
+                    <div class="feature_image">
+                        <img src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+
+                    <a href="">Pink Flower Tree</a>
+                </div>
+                <div class="feature_item">
+                    <div class="feature_image">
+                        <img src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+
+                    <a href="">Pink Flower Tree</a>
+                </div>
+            </div>
+        </section>
+        <!-- Feature banner section -->
+        <section class="container">
+            <div class="feature_banner_items">
+                <div class="features_banner_item">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="features_banner_item">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="features_banner_item">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Hot deals section -->
+        <section class="hot_deals">
+            <div class="container">
+                <div class="hot_deals_text">
+                    <div class="section_text hot_deal">
+                        <h2>Our Featured Flowers</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a
+                            page when
+                            looking at its layout.</p>
+                        <button class="btn-primary">Sign Up</button>
+                    </div>
+                    <div class="hot_deals_pic">
+                        <img src="Flower Asset/pngwing 8.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Instagram section -->
+
+        <section class="container insta_items">
+            <div class="section_text instext">
+                <h2>Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a
+                    page when
+                    looking at its layout.</p>
+            </div>
+            <div class="insta_images">
+                <img src="Flower Asset/Rectangle 4.png" alt="">
+                <img src="Flower Asset/Rectangle 5.png" alt="">
+                <img src="Flower Asset/Rectangle 6.png" alt="">
+                <img src="Flower Asset/Flower 01.png" alt="">
+            </div>
+        </section>
+
+        <!-- Subscriber section -->
+        <section class="container subscriber_section">
+            <div class="section_text instext">
+                <h2>Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a
+                    page when
+                    looking at its layout.</p>
+                <div class="ddvv">
+                    <input type="email" placeholder="Enter your email">
+                    <button class="btn-primary">Subscription</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
