--- a/seven/index.html
+++ b/seven/index.html
@@ -122,6 +122,13 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="section_text">
+            <h2>FlowerShop</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p>&copy;2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+    </footer>
 </body>
 
 </html>
